View Issue Details

IDProjectCategoryView StatusLast Update
0024143Open CASCADEOCCT:Modeling Algorithmspublic2013-12-19 13:57
ReporteremvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024143: bopcheck command throws an exception
DescriptionThe problem has been detected in the test case boolean bfuse_complex P8.
Steps To Reproducerestore [locate_data_file tool_1.brep] b
# 1. bopcheck
bopcheck b
An exception was caught 00590AFC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0xFEFD0008 during 'READ' operation
** Exception ** 00590AFC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0xFEFD0008 during 'READ' operation

# 2. modeling case
explode b e; copy b_23 b1
explode b f; copy b_14 b2
bop b1 b2
An exception was caught 00590AFC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0xFEFD0008 during 'READ' operation
** Exception ** 00590AFC : OSD_Exception_ACCESS_VIOLATION: ACCESS VIOLATION at address 0xFEFD0008 during 'READ' operation
TagsNo tags attached.
Test case numberbugs modalg_5(010) bug24143

Activities

emv

2013-09-05 15:53

developer   ~0025466

Git branch CR24143 is ready to be reviewed.

ifv

2013-09-09 18:08

developer   ~0025502

Dear EMV, since bobcheck command is under your and PKV responsibility, please create case with corresponding modeling command.

ifv

2013-09-10 10:31

developer   ~0025507

Ok

mkv

2013-09-11 11:17

tester   ~0025525

Dear BugMaster,

Branch CR24143 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 34b0d63812a9f27322745569208023c0be83dd7a

Number of compiler warnings:

occt component :
Linux: 783 (787 on master)
Windows: 392 (392 on master)

products component :
Linux: 190 (190 on master)
Windows: 287 (287 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
http://occt-tests/CR24143-master-occt/Debian60-64/bugs/modalg_5/bug24143.html
http://occt-tests/CR24143-master-occt/Windows-32-VC9/bugs/modalg_5/bug24143.html
bugs modalg_5(010) bug24143 - OK.
TOTAL CPU TIME: 1576.54 sec - On Linux.
TOTAL CPU TIME: 264.21875 sec - On Windows.

Testing on Linux:
Total MEMORY difference: 365885116 / 364486640
Total CPU difference: 47811.700000000965 / 45375.73000000108

Testing on Windows:
Total MEMORY difference: 426338472 / 427302452
Total CPU difference: 42434.625 / 47264.3125

There are not differences in images found by testdiff.

Related Changesets

occt: master 6dc54e56

2013-09-12 10:14:12

emv


Committer: bugmaster Details Diff
0024143: bopcheck command throws an exception
Use the tolerance value of the face instead of sum of tolerance values of face and edge to compute grid points on the surface of the face.
Adding test case for issue CR24143
Affected Issues
0024143
mod - src/IntTools/IntTools_BeanFaceIntersector.cxx Diff File
add - tests/bugs/modalg_5/bug24143 Diff File

Issue History

Date Modified Username Field Change
2013-09-04 15:00 emv New Issue
2013-09-04 15:00 emv Assigned To => emv
2013-09-05 15:53 emv Note Added: 0025466
2013-09-05 15:53 emv Assigned To emv => ifv
2013-09-05 15:53 emv Status new => resolved
2013-09-09 18:08 ifv Note Added: 0025502
2013-09-09 18:08 ifv Assigned To ifv => emv
2013-09-09 18:08 ifv Status resolved => feedback
2013-09-10 09:01 emv Assigned To emv => ifv
2013-09-10 09:01 emv Status feedback => resolved
2013-09-10 09:01 emv Steps to Reproduce Updated
2013-09-10 09:01 emv Steps to Reproduce Updated
2013-09-10 10:31 ifv Note Added: 0025507
2013-09-10 10:31 ifv Status resolved => reviewed
2013-09-10 10:59 mkv Assigned To ifv => mkv
2013-09-11 11:17 mkv Note Added: 0025525
2013-09-11 11:17 mkv Test case number => bugs modalg_5(010) bug24143
2013-09-11 11:17 mkv Assigned To mkv => bugmaster
2013-09-11 11:17 mkv Status reviewed => tested
2013-09-12 13:40 bugmaster Target Version => 6.7.0
2013-09-16 10:47 bugmaster Changeset attached => occt master 6dc54e56
2013-09-16 10:47 bugmaster Status tested => verified
2013-09-16 10:47 bugmaster Resolution open => fixed
2013-12-19 13:52 bugmaster Status verified => closed
2013-12-19 13:57 bugmaster Fixed in Version => 6.7.0