0024143: bopcheck command throws an exception Use the tolerance value of the face instead of sum of tolerance values of face and edge to compute grid points on the surface of the face. Adding test case for issue CR24143